--- a/grails-app/assets/stylesheets/AODNLanding.css
+++ b/grails-app/assets/stylesheets/AODNLanding.css
@@ -15,9 +15,9 @@ a {
     font-weight: bold;;
 }
 
-/*td, p, button {
+td, p, button {
     font-family: inherit;
-}*/
+}
 
 h1, h2 {
     white-space: normal;
@@ -56,7 +56,6 @@ img {
 }
 
 #home {
-    padding: 80px 0;
     background: #246190 url(../images/AODN/landing/Nature-Clear-Sky-Blue-Water.jpg) no-repeat top center fixed;
     box-shadow: inset 0 0 59px 3px rgba(16, 64,94, 0.9);
     -webkit-background-size: cover;
@@ -82,9 +81,25 @@ img {
     border: 2px solid white;
 }
 
+/* bootsrap v4Alpha */
+.btn-secondary {
+    background-color: #fff;
+    border-color: #ccc;
+    color: #373a3c;
+}
+
+.btn-secondary:hover {
+    background-color: #e6e6e6;
+    border-color: #adadad;
+}
+
+#toplinks {
+
+}
+
 #home .homeContent p {
     font-family: "Oswald",sans-serif;
-    font-size: 2em;
+    font-size: 1.8em;
     margin: 10px 0 20px 0;
     text-shadow: 1px 1px 16px rgba(6,73,108, 0.62);
 }
@@ -93,7 +108,7 @@ img {
     font-family: impact, sans-serif;
     text-shadow: 1px 1px 16px rgba(6,73,108, 0.62);
     font-weight: 700;
-    font-size: 10em;
+    font-size: 8.5em;
     margin: 0;
     padding: 0;
 }
@@ -117,6 +132,12 @@ a:focus {
 
 .socialLinks {
     text-align: right;
+}
+
+@media (min-width: 1000px) {
+    .container{
+        max-width: 800px;
+    }
 }
 
 @media (max-width: 1000px)  {
