--- a/grails-app/assets/stylesheets/landingPageStyle.css
+++ b/grails-app/assets/stylesheets/landingPageStyle.css
@@ -1,5 +1,5 @@
 /*
-* This is a manifest file that'll be compiled into application.css, which will include all the files
+* This is a manifest file that'll be compiled into landingPageStyle.css, which will include all the files
 * listed below.
 *
 * Any CSS file within this directory can be referenced here using a relative path.
@@ -7,11 +7,9 @@
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
-*= require bootstrap
-*= require grails
-*= require main
-*= require mobile
-*= require_full_tree font-awesome-4.3.0/css/font-awesome.css
+*= require bootstrap-3.3.6/css/bootstrap
+*= require AODNLanding
+*= require_full_tree font-awesome-4.3.0
 *= require_self
 */
 
